[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://rocks/Rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/space_background.png" type="Texture" id=4]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/synthetic_thunder_short.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/zap2a.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/Funky-Gameplay_Looping.ogg" type="AudioStream" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.342804, 1.00609, 0, 0, 0, 0, 1024.81, 2.40276, 0, 0, 0, 0, 1022.72, 599.478, 0, 0, 0, 0, 1.7522, 599.478, 0, 0, 0, 0, -0.342804, 1.00609 )
}

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )
Rock = ExtResource( 2 )
Enemy = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )
centered = false

[node name="Player" parent="." instance=ExtResource( 5 )]
pause_mode = 1
editor/display_folded = true
position = Vector2( 520, 200 )

[node name="Rocks" type="Node" parent="." groups=[
"rocks",
]]
pause_mode = 1

[node name="RockPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="RockSpawn" type="PathFollow2D" parent="RockPath"]
position = Vector2( -0.342804, 1.00609 )
rotation = 0.00136238

[node name="HUD" parent="." instance=ExtResource( 6 )]
pause_mode = 1

[node name="EnemyTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="LevelUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
[connection signal="dead" from="Player" to="." method="game_over"]
[connection signal="lives_changed" from="Player" to="HUD" method="update_lives"]
[connection signal="shield_changed" from="Player" to="HUD" method="update_shield"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]

[editable path="Player"]
